# YASE

./: .gitignore  Cargo.toml  Makefile  README.md  YASE  api.go  blocks.txt  fuck.txt  go.mod  go.sum  main.go  memory.go  shorter_test.json  subl  test.json  test.txt  yeah.txt
core/: api.go  core.go  events.go  memory.go
core/assembly/: assembly_js.go  assembly_x86.go
core/syscall/: syscall_js.go  syscall_normal.go
proc/: Cargo.toml  lib.rs
src/: block.rs  block_names.rs  blocks.rs  decomp.rs  main.rs  scratch.rs
src/block_defs/: control.rs  custom.rs  data.rs  events.rs  look.rs  mod.rs  motion.rs  operators.rs  sensing.rs  sound.rs
web/: gofill.js  index.html
