[package]
name = "yase"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "proc",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"serde" = "1.0"
"serde_derive" = "1.0"
"serde_json" = "1.0"
"lazy_static" = "1.4"
"regex" = "1.6"
reqwest = { version = "0.11", features = ["blocking"] }
proc = {path = "./proc"}
#"blue_engine" = "0.4"